--- a/style.css
+++ b/style.css
@@ -285,7 +285,7 @@ header {
     }
 }
 
-@media screen and (max-height: 770px) {
+@media screen and (max-width: 770px) {
     .left-container h1 {
         font-size: 2.5rem;
         width: 60%;
@@ -305,7 +305,7 @@ header {
     }
 }
 
-@media screen and (max-height: 700px) {
+@media screen and (max-width: 700px) {
     .left-container h1 {
         font-size: 2rem;
         line-height: 35px;
